--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -44,10 +44,12 @@
   <a ng-click="closeAllModals()">Cancel</a>
 </script>
 <script type="text/ng-template" id="voteSettings">
-  <h1>Vote Settings</h1>
-  <span class="maximum-votes"> Maximum votes: <strong>{{ maxVotes }}</strong> </span>
-  <span class="null-blank-space">&nbsp</span>
-  <span><i class="fa fa-plus fa-md" ng-click="incrementMaxVotes();" aria-hidden="true"></i></span>
-  <span><i class="fa fa-minus fa-md" ng-click="decrementMaxVotes();" aria-hidden="true"></i></span>
-  <p>Maximum votes are the number of votes each participant is allowed to cast</p>
+  <div class='vote-settings'>
+    <h1>Vote Settings</h1>
+    <span class="maximum-votes"> Maximum votes: <strong>{{ maxVotes }}</strong> </span>
+    <span class="null-blank-space">&nbsp</span>
+    <span><i class="fa fa-plus fa-md increment-button" ng-click="incrementMaxVotes();" aria-hidden="true"></i></span>
+    <span><i class="fa fa-minus fa-md decrement-button" ng-click="decrementMaxVotes();" aria-hidden="true"></i></span>
+    <p>Maximum votes are the number of votes each participant is allowed to cast</p>
+  </div>
 </script>
