Updates from 90ae167 Glauber Ramos Merge pull request #166 from mrzinger/138-import-cards

--- a/components/menu.html
+++ b/components/menu.html
@@ -11,7 +11,11 @@
     <option value="$id">Created date</option>
     <option value="votes">Votes</option>
   </select>
-  <span ng-show="voteService.remainingVotes(userId, maxVotes, messages) < maxVotes" class="remaining-votes">Remaining votes: <strong>{{ voteService.remainingVotes(userId, maxVotes, messages) }}</strong></span>
+  <span ng-show="voteService.remainingVotes(userId, maxVotes, messages) < maxVotes" class="remaining-votes">Remaining votes: <strong>{{ voteService.remainingVotes(userId, maxVotes, messages) }}</strong>
+    <span class="null-blank-space">&nbsp</span>
+    <span class="settings" ng-click="modalService.openVoteSettings(this)"><i class='fa fa-pencil fa-md'></i></span>
+  </span>
+
   <span class="pull-right menu-controls">
     <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
     <button class="pull-right delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
