--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -43,3 +43,33 @@
   <button ng-controller="MessageCtrl" class="delete-button" ng-click="dropped(dragEl, dropEl)">Merge</button>
   <a ng-click="closeAllModals()">Cancel</a>
 </script>
+<script type="text/ng-template" id="importCards">
+  <h1>Import cards</h1>
+  <span >
+    <p>1. <a class="inline-link" type="file" ngf-select="submitImportFile($file)" ngf-pattern="text/csv" accept="text/csv" ngf-max-size="10KB"> Submit</a> a csv file </p>
+    <p>2. Setup fields mapping</button></p>
+    <table>
+      <tr ng-repeat="column in import.mapping track by $index">
+        <td class="align-right">{{column.name}}</td>
+        <td class="align-left">
+          <select class="import-select" ng-model="column.mapFrom">
+            <option select="selected" value="-1">[Select csv column]</option>
+            <option ng-repeat="importColumn in import.data[0] track by $index" value="{{$index}}">{{importColumn}}</option>
+          </select>
+        </td> 
+    </table>
+    <p class="error-msg" ng-show="import.error"> {{import.error}} </p>
+    <button ng-click="importMessages()" ng-disabled="(import.mapping| filter:{mapFrom:'!-1'}).length == 0">Import</button>
+    <a ng-click="closeAllModals()">Cancel</a>
+    </span>
+</script>
+<script type="text/ng-template" id="voteSettings">
+  <div class='vote-settings'>
+    <h1>Vote Settings</h1>
+    <span class="maximum-votes"> Maximum votes: <strong>{{ maxVotes }}</strong> </span>
+    <span class="null-blank-space">&nbsp</span>
+    <span><i class="fa fa-plus fa-md increment-button" ng-click="incrementMaxVotes();" aria-hidden="true"></i></span>
+    <span><i class="fa fa-minus fa-md decrement-button" ng-click="decrementMaxVotes();" aria-hidden="true"></i></span>
+    <p>Maximum votes are the number of votes each participant is allowed to cast</p>
+  </div>
+</script>
