--- a/stylesheets/_button.scss
+++ b/stylesheets/_button.scss
@@ -1,4 +1,5 @@
-button, .button {
+button,
+.button {
   width: auto;
   padding: 5px 8px;
   margin-left: 10px;
@@ -10,7 +11,6 @@ button, .button {
   border: 0;
   border-bottom: 2px solid $dark-blue;
   border-radius: 2px;
-  transform: translate3d(0px, 0px, 0px);
 
   &.first {
     background: $purple;
@@ -50,11 +50,12 @@ header button:hover {
   color: $light-teal;
 }
 
-.ngdialog-content a.inline-link{
+.ngdialog-content a.inline-link {
   margin: 0;
 }
 
-.ngdialog-content button:hover, .editing-column button:hover {
+.ngdialog-content button:hover,
+.editing-column button:hover {
   position: relative;
   top: 1px;
   border-bottom: 0;
@@ -78,6 +79,7 @@ header button:hover {
   background: $green;
 }
 
-.success-button, .message button {
+.success-button,
+.message button {
   border-bottom: 2px solid $light-green;
 }
