--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -8,14 +8,13 @@ header {
   color: white;
   background-color: $teal;
   border-radius: 0;
-  transition: all 450ms cubic-bezier(.23, 1, .32, 1) 0ms;
-
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 
   h1 {
     float: left;
     margin: 0;
-    margin-top: .45em;
+    margin-top: 0.45em;
     font-family: "RobotoBold";
     font-size: 1.82em;
     line-height: 1em;
@@ -23,8 +22,8 @@ header {
 
   span {
     float: right;
-    margin: .9em 0;
-    font-size: .9em;
+    margin: 0.9em 0;
+    font-size: 0.9em;
   }
 
   label {
@@ -59,7 +58,7 @@ header {
       border-radius: 4px;
       opacity: 0;
 
-      &:before {
+      &::before {
         position: absolute;
         top: -15px;
         left: 162px;
