--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -34,7 +34,8 @@
     }
   }
 
-  h2, label {
+  h2,
+  label {
     line-height: 1.3em;
   }
 }
@@ -52,10 +53,11 @@
     color: $teal;
   }
 
-  @-webkit-keyframes pulse {
+  @keyframes pulse {
     70% {
       box-shadow: 0 0 0 50px rgba(#5a99d4, 0);
     }
+
     100% {
       box-shadow: 0 0 0 0 rgba(#5a99d4, 0);
     }
