--- a/stylesheets/_spinner.scss
+++ b/stylesheets/_spinner.scss
@@ -17,7 +17,7 @@
   font-size: 10px;
   text-align: center;
   background-color: $dark-gray;
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .spinner > .rect {
@@ -35,35 +35,30 @@
 }
 
 .spinner .rect3 {
-  -webkit-animation-delay: -1.0s;
-          animation-delay: -1.0s;
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
 }
 
 .spinner .rect4 {
-  -webkit-animation-delay: -.9s;
-          animation-delay: -.9s;
+  -webkit-animation-delay: -0.9s;
+          animation-delay: -0.9s;
 }
 
 .spinner .rect5 {
-  -webkit-animation-delay: -.8s;
-          animation-delay: -.8s;
-}
-
-@-webkit-keyframes stretchdelay {
-  0%, 40%, 100% {
-    -webkit-transform: scaleY(.4);
-  }
-  20% {
-    -webkit-transform: scaleY(1.0);
-  }
+  -webkit-animation-delay: -0.8s;
+          animation-delay: -0.8s;
 }
 
 @keyframes stretchdelay {
-  0%, 40%, 100% {
-    -webkit-transform: scaleY(.4);
-            transform: scaleY(.4);
-  }  20% {
-    -webkit-transform: scaleY(1.0);
-            transform: scaleY(1.0);
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+            transform: scaleY(0.4);
+  }
+
+  20% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
   }
 }
