--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -14,6 +14,10 @@
   src: url("../fonts/Roboto-Bold.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("../fonts/Roboto-Bold.woff?v=0.4.2") format("woff"), url("../fonts/Roboto-Bold.ttf?v=0.4.2") format("truetype"), url("../fonts/Roboto-Bold.svg?v=0.4.2") format("svg");
 }
 
+legend {
+  display: none;
+}
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
