--- a/stylesheets/_button.scss
+++ b/stylesheets/_button.scss
@@ -23,8 +23,8 @@ button,
   }
 
   &.delete-button {
-    background: #df3e3e;
-    border-color: darken(#df3e3e, 15%);
+    background: #da3939;
+    border-color: darken(#da3939, 15%);
   }
 }
 
