--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -5,8 +5,7 @@
   box-sizing: border-box;
   padding: 10px 15px;
   overflow: hidden;
-  background: #eee;
-  border-top: 2px solid #aaa;
+  border-bottom: 2px solid #eee;
 
   h2 {
     margin-top: 0;
