--- a/components/boardContext.html
+++ b/components/boardContext.html
@@ -1,1 +1,1 @@
-<input ng-show="userId !== ''" id="board-context" class="board-context" ng-model="boardContext" ng-change="changeBoardContext()" placeholder="Set the context of the retrospective here..." />
+<input ng-show="userId !== ''" title="board context" id="board-context" class="board-context" ng-model="boardContext" ng-change="changeBoardContext()" placeholder="Set the context of the retrospective here..." />
