--- a/stylesheets/_colors.scss
+++ b/stylesheets/_colors.scss
@@ -1,17 +1,17 @@
-$column-colors-main: #4db6ac, #e57373, #ba68c8, #64b5f6, #ffca28, #ffa000;
-$column-colors-votes: #009688, #e6403d, #ab47bc, #039be5, #ffb300, #f57c00;
+$column-colors-main: #008579, #f44336, #9c27b0, #2196f3, #3f51b5, #ff9800;
+$column-colors-votes: #00695c, #d32f2f, #7b1fa2, #1976d2, #283593, #ef6c00;
 $grey: #555;
 $light-grey: #777;
 $darkest-gray: #333;
 $dark-gray: #8c8c8c;
 $lightest-gray: #d6d6d6;
 $yellow: #ffcf22;
-$teal: #00bcd4;
-$light-teal: #0299ad;
-$dark-blue: #017280;
+$teal: #2196f3;
+$light-teal: #3f51b5;
+$dark-blue: #283593;
 $light-green: #00a946;
 $green: #00c853;
-$red: #ef5350;
-$faded-red: #c33b38;
-$light-purple: #9a38ab;
-$purple: #ba68c8;
+$red: #f44336;
+$faded-red: #d32f2f;
+$light-purple: #9c27b0;
+$purple: #8e24aa;
