--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -6,7 +6,8 @@ header {
   padding-right: 15px;
   padding-left: 15px;
   color: white;
-  background-color: $teal;
+  background-color: #2196f3;
+  border-bottom: 1px solid #ccc;
   border-radius: 0;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
