[#159] More changes on the colors

--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -16,8 +16,8 @@ header {
     float: left;
     margin: 0;
     margin-top: 0.45em;
-    font-family: "RobotoBold";
-    font-size: 1.82em;
+    font-family: "Roboto";
+    font-size: 1.7em;
     line-height: 1em;
   }
 
