--- a/stylesheets/_colors.scss
+++ b/stylesheets/_colors.scss
@@ -1,5 +1,5 @@
-$column-colors-main: #9c27b0, #3f51b5, #2196f3, #008579, #ff5722, #ff9800;
-$column-colors-votes: #7b1fa2, #283593, #1976d2, #00695c, #e64a19, #f57c00;
+$column-colors-main: #9c27b0, #3f51b5, #2196f3, #008579, #f44336, #ff9800;
+$column-colors-votes: #7b1fa2, #283593, #1976d2, #00695c, #d32f2f, #f57c00;
 $grey: #555;
 $light-grey: #777;
 $darkest-gray: #333;
