--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -45,7 +45,9 @@
 }
 
 .text {
+  padding-top: 0.1em;
   padding-right: 15px;
+  padding-left: 0.1em;
   word-break: break-word;
   white-space: pre-line;
 }
