--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -298,7 +298,7 @@ blockquote {
   margin-bottom: -10px;
   font-size: 1.3em;
   color: white;
-  background: #df3e3e;
+  background: $danger;
 }
 
 .base-msg {
