--- a/stylesheets/_colors.scss
+++ b/stylesheets/_colors.scss
@@ -1,10 +1,11 @@
 $column-colors-main: #009688, #e91e63, #9c27b0, #3f51b5, #2196f3, #ff5722;
 $column-colors-votes: #00796b, #c2185b, #7b1fa2, #283593, #1976d2, #e64a19;
+$darkest-gray: #333;
 $grey: #555;
 $light-grey: #777;
-$darkest-gray: #333;
 $dark-gray: #8c8c8c;
 $lightest-gray: #d6d6d6;
+$lighter-gray: #ccc;
 $yellow: #ffcf22;
 $teal: #2196f3;
 $light-teal: #3f51b5;
@@ -15,3 +16,4 @@ $red: #f44336;
 $faded-red: #d32f2f;
 $light-purple: #9c27b0;
 $purple: #8e24aa;
+$danger: #df3e3e;
