--- a/stylesheets/_button.scss
+++ b/stylesheets/_button.scss
@@ -23,8 +23,8 @@ button,
   }
 
   &.delete-button {
-    background: #da3939;
-    border-color: darken(#da3939, 15%);
+    background: $danger;
+    border-color: darken($danger, 15%);
   }
 }
 
