--- a/stylesheets/_colors.scss
+++ b/stylesheets/_colors.scss
@@ -17,3 +17,11 @@ $faded-red: #d32f2f;
 $light-purple: #9c27b0;
 $purple: #8e24aa;
 $danger: #df3e3e;
+$info-msg: #059;
+$info-msg-back: #bef;
+$success-msg: #270;
+$success-msg-back: #dff2bf;
+$warning-msg: #9f6000;
+$warning-msg-back: #feefb3;
+$error-msg: #d8000c;
+$error-msg-back: #ffbaba;
