--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -9,7 +9,7 @@ header {
   background-color: $teal;
   border-bottom: 1px solid $lighter-gray;
   border-radius: 0;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 
   h1 {
