[#159] pull request comments

--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -38,7 +38,7 @@
   </section>
   <section class="step">
     <h2>Set the context</h2>
-    <img src="img/image1.png" alt="set the context" />
+    <img src="img/image1.png" alt="screenshot of set the context feature" />
     <p>
   Why is this retrospective being held? What will it cover? Retrospectives, similarly to any other meeting, are more effective if the participants align their expectations before getting into it.
     </p>
@@ -47,14 +47,14 @@
     <h2>
       Read the prime directive
     </h2>
-  <img src="img/image2.png" alt="reat the prime directive" />
+  <img src="img/image2.png" alt="screenshot of read the prime directive feature" />
   <p class="left">The statement is invaluable for setting the meeting tone. Make it visible to all participants, and read it out loud before running your retrospective activity.</p>
   </section>
   <section class="step">
     <h2>
       Go for it!
     </h2>
-    <img src="img/image3.png" alt="go for it!" />
+    <img src="img/image3.png" alt="screenshot of an example of a board" />
     <p>
   It is time to gather data, talk about the positive stuff, recognize people and seek improvements. Select an activity, create and customize your board. Go for it!
     </p>
