--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -348,7 +348,7 @@ blockquote {
     padding: 0 15px;
     padding-bottom: 10px;
     align-items: center;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid $almost-white;
   }
 
   select {
