--- a/stylesheets/_colors.scss
+++ b/stylesheets/_colors.scss
@@ -6,6 +6,7 @@ $light-grey: #777;
 $dark-gray: #8c8c8c;
 $lightest-gray: #d6d6d6;
 $lighter-gray: #ccc;
+$almost-white: #eee;
 $yellow: #ffcf22;
 $teal: #2196f3;
 $light-teal: #3f51b5;
