--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   padding: 10px 15px;
   overflow: hidden;
-  border-bottom: 2px solid #eee;
+  border-bottom: 2px solid $almost-white;
 
   h2 {
     margin-top: 0;
