--- a/components/menu.html
+++ b/components/menu.html
@@ -2,12 +2,12 @@
   <h2 id="board-name" class="board-name" ng-show="!editingBoardName" ng-click="editingBoardName=true;newBoardName=boardId;">{{boardId}}</h2>
   <i class="fa fa-pencil" ng-show="!editingBoardName"></i>
   <span ng-show="editingBoardName" class="editing-board-name">
-    <input ng-model="newBoardName"></input>
+    <input title="edit the board name" ng-model="newBoardName"></input>
     <button ng-click="changeBoardName(newBoardName);editingBoardName=false;" class="success-button">Save</button>
     <a class="blue" ng-click="editingBoardName=false;">Cancel</a>
   </span>
   <label class="menu-controls">Sort by</label>
-  <select ng-model="sortField">
+  <select title="sort fields by" ng-model="sortField">
     <option value="$id">Created date</option>
     <option value="votes">Votes</option>
   </select>
@@ -15,7 +15,6 @@
     <span class="null-blank-space">&nbsp</span>
     <span class="settings" ng-click="modalService.openVoteSettings(this)"><i class='fa fa-pencil fa-md'></i></span>
   </span>
-
   <span class="pull-right menu-controls">
     <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
     <button class="pull-right delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
