--- a/stylesheets/_about.scss
+++ b/stylesheets/_about.scss
@@ -1,7 +1,8 @@
 .about {
-  width: 60%;
+  padding: 70px 17%;
   margin: 0 auto;
-  margin-top: 40px;
+  margin-top: 20px;
+  border-top: 3px solid #f3f3f3;
 
   iframe {
     margin: 5px;
