--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -5,6 +5,13 @@
   <button class="delete-button" ng-click="deleteCards()">Delete</button>
   <a ng-click="closeAllModals()">Cancel</a>
 </script>
+<script type="text/ng-template" id="deleteBoard">
+  <p class="header">Danger Zone</p>
+  <p>Are you sure you want to delete the board?</p>
+  <p>Once you delete the board, there is no going back. Please be certain.</p>
+  <button class="delete-button" ng-click="deleteBoard()">Delete</button>
+  <a ng-click="closeAllModals()">Cancel</a>
+</script>
 <script type="text/ng-template" id="copyBoard">
   <h1>Export Board</h1>
   <p>Select cards text with mouse and copy it</p>
