--- a/components/menu.html
+++ b/components/menu.html
@@ -18,5 +18,6 @@
   <span class="pull-right menu-controls">
     <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
     <button class="pull-right delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
+    <button class="pull-right delete-button" ng-click="modalService.openDeleteBoard(this)">Delete board</button>
   </span>
 </div>
