Add filter cards

--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -62,3 +62,11 @@
     }
   }
 }
+
+.filter-message {
+  width: 200px;
+  height: 25px;
+  margin-left: 15px;
+  font-size: 0.85em;
+  vertical-align: top;
+}
