--- a/components/menu.html
+++ b/components/menu.html
@@ -15,6 +15,7 @@
     <span class="null-blank-space">&nbsp</span>
     <span class="settings" ng-click="modalService.openVoteSettings(this)"><i class='fa fa-pencil fa-md'></i></span>
   </span>
+  <input class="filter-message" placeholder="Filter your cards" ng-model="filterMessage" />
   <span class="pull-right menu-controls">
     <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
     <button class="pull-right delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
