--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -3,20 +3,20 @@
   <p>Are you sure you want to delete all cards?</p>
   <p>Once you delete all cards, there is no going back. Please be certain.</p>
   <button class="delete-button" ng-click="deleteCards()">Delete</button>
-  <a ng-click="closeAllModals()">Cancel</a>
+  <a ng-click="modalService.closeAll();">Cancel</a>
 </script>
 <script type="text/ng-template" id="deleteBoard">
   <p class="header">Danger Zone</p>
   <p>Are you sure you want to delete the board?</p>
   <p>Once you delete the board, there is no going back. Please be certain.</p>
   <button class="delete-button" ng-click="deleteBoard()">Delete</button>
-  <a ng-click="closeAllModals()">Cancel</a>
+  <a ng-click="modalService.closeAll();">Cancel</a>
 </script>
 <script type="text/ng-template" id="copyBoard">
   <h1>Export Board</h1>
   <p>Select cards text with mouse and copy it</p>
   <p class="copy-text" ng-bind-html="getBoardText()"></p>
-  <button ng-click="closeAllModals()">Close</button>
+  <button ng-click="modalService.closeAll();">Close</button>
 </script>
 <script type="text/ng-template" id="addNewColumn">
   <h1>New column</h1>
@@ -36,19 +36,19 @@
   <h1>Delete note</h1>
   <p>Are you sure you want to delete this note?</strong></p>
   <button class="delete-button" ng-click="deleteMessage(message)">Delete</button>
-  <a ng-click="closeAllModals()">Cancel</a>
+  <a ng-click="modalService.closeAll();">Cancel</a>
 </script>
 <script type="text/ng-template" id="deleteColumn">
   <h1>Delete column</h1>
   <p>Are you sure you want to delete this column?</strong></p>
   <button class="delete-button" ng-click="deleteColumn(type)">Delete</button>
-  <a ng-click="closeAllModals()">Cancel</a>
+  <a ng-click="modalService.closeAll();">Cancel</a>
 </script>
 <script type="text/ng-template" id="mergeCards">
   <h1>Merge cards</h1>
   <p>Are you sure you want to merge these two cards?</strong></p>
   <button ng-controller="MessageCtrl" class="delete-button" ng-click="dropped(dragEl, dropEl)">Merge</button>
-  <a ng-click="closeAllModals()">Cancel</a>
+  <a ng-click="modalService.closeAll();">Cancel</a>
 </script>
 <script type="text/ng-template" id="importCards">
   <h1>Import CSV</h1>
@@ -67,7 +67,7 @@
     </table>
     <p class="error-msg" ng-show="import.error"> {{import.error}} </p>
     <button ng-click="importMessages()" ng-disabled="(import.mapping| filter:{mapFrom:'!-1'}).length == 0">Import</button>
-    <a ng-click="closeAllModals()">Cancel</a>
+    <a ng-click="modalService.closeAll();">Cancel</a>
     </span>
 </script>
 <script type="text/ng-template" id="voteSettings">
