--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -75,8 +75,8 @@
     <h1>Vote Settings</h1>
     <span class="maximum-votes"> Maximum votes: <strong>{{ maxVotes }}</strong> </span>
     <span class="null-blank-space">&nbsp</span>
-    <span><i class="fa fa-plus fa-md increment-button" ng-click="incrementMaxVotes();" aria-hidden="true"></i></span>
-    <span><i class="fa fa-minus fa-md decrement-button" ng-click="decrementMaxVotes();" aria-hidden="true"></i></span>
+    <span><i class="fa fa-plus fa-md increment-button" ng-click="voteService.incrementMaxVotes(userId, maxVotes);" aria-hidden="true"></i></span>
+    <span><i class="fa fa-minus fa-md decrement-button" ng-click="voteService.decrementMaxVotes(userId, maxVotes);" aria-hidden="true"></i></span>
     <p>Maximum votes are the number of votes each participant is allowed to cast</p>
   </div>
 </script>
