Making the site more accessible

--- a/components/about.html
+++ b/components/about.html
@@ -1,5 +1,5 @@
 <div class="about" ng-show="userId === ''">
-  <p class="first-p">Hello, <br> My name is <a target="_blank" href="http://glauberramos.com">Glauber Ramos</a></p><img class="me" src="img/me.jpeg" />
+  <p class="first-p">Hello, <br> My name is <a target="_blank" href="http://glauberramos.com">Glauber Ramos</a></p><img class="me" src="img/me.jpeg" alt="" />
   <p>I'm a frontend developer and UX designer from Brazil. You can contact me ✉️ <a href="mailto:glauberamos@gmail.com">here</a>.</p>
   <p>I created Fun Retro back in 2015. My motivation was to create an easy and simple retrospective tool that my team could use and make it open-source.</p>
   <p>I received a lot of help from many <a target="_blank" href="https://github.com/funretro/distributed/graphs/contributors">🙌 Contributors</a> ❤️, you can help in different ways: create <a target="_blank" href="https://github.com/funretro/distributed/issues">🐞 Issues</a>, <a target="_blank" href="https://github.com/funretro/distributed/pulls">🚀 Pull Requests</a> or <a target="_blank" href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=gN-D7bBX6FTnJrMphAmpiob67B7QyBQ_5t9hAsxQ26JGQodKzckT0Og68T4&dispatch=5885d80a13c0db1f8e263663d3faee8d83a0bf7db316a7beb1b14b43acd04037&rapidsState=Donation__DonationFlow___StateDonationLogin&rapidsStateSignature=77cd2e46e1623e0736be52368dc1055bfc78435e">👯‍♂️ Donate</a> to the project.<p>
@@ -13,6 +13,6 @@
     <input type="image" class="donation" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
     <img alt="" border="0" src="https://www.paypalobjects.com/pt_BR/i/scr/pixel.gif" width="1" height="1" alt="paypal pixel">
   </form>
-  <a href="https://opencollective.com/distributed/backer/0/website" target="_blank"><img src="https://opencollective.com/distributed/backer/0/avatar.svg"></a>
-  <a href="https://opencollective.com/distributed/sponsor/0/website" target="_blank"><img src="https://opencollective.com/distributed/sponsor/0/avatar.svg"></a>
+  <a href="https://opencollective.com/distributed/backer/0/website" target="_blank"><img src="https://opencollective.com/distributed/backer/0/avatar.svg" alt="Become a Backer"></a>
+  <a href="https://opencollective.com/distributed/sponsor/0/website" target="_blank"><img src="https://opencollective.com/distributed/sponsor/0/avatar.svg" alt="Become a Sponsor"></a>
 </span>
