--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -1,6 +1,7 @@
 <div class="filter-mobile" ng-show="userId !== ''">
-  <label>Filter by</label>
+  <label for="selectedType">Filter by</label>
   <select
+    id="selectedType"
     title="select column type"
     ng-model="selectedType"
     ng-options="column.id as column.value for column in board.columns">
@@ -11,11 +12,11 @@
     <span ng-show="boardId !== ''" class="message-list" x-lvl-drop-target="true" x-on-drop="droppedEvent(dragEl, dropEl)" data-column-id="{{type.id}}" ng-class="{'selected': isColumnSelected(type.id)}" ng-repeat="type in board.columns">
         <ul class="column {{utils.columnClass(type.id)}}">
           <div class="column-header">
-            <a class="controls delete" ng-show="!editing && board.columns.length > 1" href="javascript:void(0)" ng-click="modalService.openDeleteColumn(this)"><i class="fa fa-times"></i></a>
+            <a class="controls delete" ng-show="!editing && board.columns.length > 1" href="javascript:void(0)" ng-click="modalService.openDeleteColumn(this)" aria-label="Delete colummn"><i class="fa fa-times"></i></a>
             <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
               {{type.value}}
             </h2>
-            <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)"><i class="fa fa-plus"></i></a>
+            <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)" aria-label="Add new message"><i class="fa fa-plus"></i></a>
           </div>
           <div class="editing-column" ng-show="editing">
               <input id="new_name_{{ type.id }}" ng-model="newName"></input>
@@ -30,17 +31,17 @@
               <div class="front" ng-class="{'filter': message.creating}">
                   <div class="message-body">
                       <div class="text">{{message.text}}</div>
-                      <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
+                      <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);" aria-label="Edit message"><i class="fa fa-pencil"></i></a>
                   </div>
                   <div class="votes">
-                      <a ng-show="voteService.canUnvoteMessage(userId, message.$id)" href="javascript:void(0)" ng-click="unvote(message.$id, message.votes)">
+                      <a ng-show="voteService.canUnvoteMessage(userId, message.$id)" href="javascript:void(0)" ng-click="unvote(message.$id, message.votes)" aria-label="Unvote">
                         <i class="fa fa-times"></i>
                       </a>
                       <ul class='message-votes'>
                         <li ng-repeat="votes in voteService.getNumberOfVotesOnMessage(userId, message.$id) track by $index"></li>
                       </ul>
                       <strong class="vote-area">
-                        <a ng-class="{'disabled': !voteService.isAbleToVote(userId, maxVotes, messages)}" href="javascript:void(0)" ng-click="vote(message.$id, message.votes)">
+                        <a ng-class="{'disabled': !voteService.isAbleToVote(userId, maxVotes, messages)}" href="javascript:void(0)" ng-click="vote(message.$id, message.votes)" aria-label="Vote">
                             <i class="fa fa-thumbs-o-up"></i>
                         </a>
                         {{ message.votes }}
@@ -50,8 +51,8 @@
               <div class="back">
                   <div class="message-body">
                       <div class="editing">
-                          <textarea ng-model="message.text" ng-change="messages.$save(message)"></textarea>
-                          <a class="delete-link" href="javascript:void(0)" ng-click="modalService.openDeleteCard(this)"><i class="fa fa-trash"></i></a>
+                          <textarea ng-model="message.text" ng-change="messages.$save(message)" aria-label="Message text entry"></textarea>
+                          <a class="delete-link" href="javascript:void(0)" ng-click="modalService.openDeleteCard(this)" aria-label="Delete message"><i class="fa fa-trash"></i></a>
                           <button ng-click="isEditing = false;saveMessage(message);">DONE</button>
                       </div>
                   </div>
