--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -8,7 +8,7 @@
           <fieldset class="subscribe">
             <legend>Email Subscription</legend>
             <h2>Wanna be notified of updates?</h2>
-            <input type="email" title="email" value="" name="EMAIL" placeholder="Enter your email address" class="subscribe__email" id="mce-EMAIL" novalidate />
+            <input type="email" value="" name="EMAIL" placeholder="Enter your email address" class="subscribe__email" id="mce-EMAIL" novalidate aria-label="Email address" />
 	          <input type="submit" title="email submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
           </fieldset>
           <div id="mce-responses" class="clear">
