--- a/components/menu.html
+++ b/components/menu.html
@@ -6,8 +6,8 @@
     <button ng-click="changeBoardName(newBoardName);editingBoardName=false;" class="success-button">Save</button>
     <a class="blue" ng-click="editingBoardName=false;">Cancel</a>
   </span>
-  <label class="menu-controls">Sort by</label>
-  <select title="sort fields by" ng-model="sortField">
+  <label for="sortField" class="menu-controls">Sort by</label>
+  <select id="sortField" title="sort fields by" ng-model="sortField">
     <option value="date_created">Created date</option>
     <option value="votes">Votes</option>
   </select>
@@ -15,7 +15,7 @@
     <span class="null-blank-space">&nbsp</span>
     <span class="settings" ng-click="modalService.openVoteSettings(this)"><i class='fa fa-pencil fa-md'></i></span>
   </span>
-  <input class="filter-message" placeholder="Filter your cards" ng-model="filterMessage" />
+  <input class="filter-message" placeholder="Filter your cards" ng-model="filterMessage" aria-label="Filter your cards" />
   <span class="pull-right menu-controls">
     <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
     <button class="pull-right delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
