--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -33,14 +33,14 @@
                       <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
                   </div>
                   <div class="votes">
-                      <a ng-show="voteService.canUnvoteMessage(userId, message.$id)" href="javascript:void(0)" ng-click="unvote(message.$id, message.votes)">
+                      <a ng-show="voteService.canUnvoteMessage(userId, message.$id)" href="javascript:void(0)" ng-click="voteService.unvote(userId, message.$id, message.votes)">
                         <i class="fa fa-times"></i>
                       </a>
                       <ul class='message-votes'>
                         <li ng-repeat="votes in voteService.getNumberOfVotesOnMessage(userId, message.$id) track by $index"></li>
                       </ul>
                       <strong class="vote-area">
-                        <a ng-class="{'disabled': !voteService.isAbleToVote(userId, maxVotes, messages)}" href="javascript:void(0)" ng-click="vote(message.$id, message.votes)">
+                        <a ng-class="{'disabled': !voteService.isAbleToVote(userId, maxVotes, messages)}" href="javascript:void(0)" ng-click="voteService.vote(userId, maxVotes,messages, message.$id, message.votes)">
                             <i class="fa fa-thumbs-o-up"></i>
                         </a>
                         {{ message.votes }}
