--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -14,7 +14,7 @@
 </script>
 <script type="text/ng-template" id="copyBoard">
   <h1>Export Board</h1>
-  <p>Select cards text with mouse and copy it</p>
+  <button class="import-btn" ng-attr-data-clipboard-text="{{importExportService.getBoardPureText(board, messages, sortField)}}">Copy text to clipboard</button>
   <p class="copy-text" ng-bind-html="importExportService.getBoardText(board, messages, sortField)"></p>
   <button ng-click="modalService.closeAll();">Close</button>
 </script>
