--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -390,6 +390,10 @@ blockquote {
     border-radius: 0;
   }
 
+  .margin-left {
+    margin-left: 10px;
+  }
+
   .aling-left {
     text-align: left;
   }
