--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -15,8 +15,8 @@
 <script type="text/ng-template" id="copyBoard">
   <h1>Export Board</h1>
   <button class="import-btn" ng-attr-data-clipboard-text="{{importExportService.getBoardPureText(board, messages, sortField)}}">Copy text to clipboard</button>
+  <button class="margin-left" ng-click="importExportService.generatePdf(board, messages, sortField)">Export board to PDF</button>
   <p class="copy-text" ng-bind-html="importExportService.getBoardText(board, messages, sortField)"></p>
-  <button ng-click="modalService.closeAll();">Close</button>
 </script>
 <script type="text/ng-template" id="addNewColumn">
   <h1>New column</h1>
