Adding material sidebar

--- a/components/header.html
+++ b/components/header.html
@@ -11,9 +11,8 @@
             </blockquote>
           </span>
       </span>
-      <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" title="github stars" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
-      <button id="import-board" ng-click="modalService.openImportBoard(this)">Import CSV</button>
-      <button id="copy-board" ng-click="modalService.openCopyBoard(this)">Export board</button>
+      <a class="header-icon" target="_blank" href="https://github.com/funretro/distributed"><i class="fa fa-github"></i></a>
+      <a class="header-icon" href="javascript:void(0)" ng-click="modalService.toggleSidebar()"><i class="fa fa-gear"></i></a>
       <button class="first" ng-click="modalService.openAddNewBoard(this)">New board</button>
     </span>
 </header>
