--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -21,6 +21,13 @@ header {
     line-height: 1em;
   }
 
+  .header-icon {
+    position: relative;
+    top: 4px;
+    margin-left: 0.5em;
+    font-size: 1.6em;
+  }
+
   span {
     float: right;
     margin: 0.9em 0;
