--- a/components/header.html
+++ b/components/header.html
@@ -12,7 +12,7 @@
           </span>
       </span>
       <a class="header-icon" target="_blank" href="https://github.com/funretro/distributed"><i class="fa fa-github"></i></a>
-      <a class="header-icon" href="javascript:void(0)" ng-click="modalService.toggleSidebar()"><i class="fa fa-gear"></i></a>
+      <a class="header-icon" href="javascript:void(0)" ng-click="sidebarOpened = true;"><i class="fa fa-gear"></i></a>
       <button class="first" ng-click="modalService.openAddNewBoard(this)">New board</button>
     </span>
 </header>
