Found a few more places to add accessibilty

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -64,9 +64,9 @@
     <p ng-show="import.mapping.length > 0">2. Asign each column to a specific CSV column</button></p>
     <table>
       <tr ng-repeat="column in import.mapping track by $index">
-        <td class="align-right">{{column.name}}</td>
+        <td class="align-right"><label for="column{{$index}}">{{column.name}}</label></td>
         <td class="align-left">
-          <select class="import-select" title="fields mapping" ng-model="column.mapFrom">
+          <select id="column{{$index}}" class="import-select" ng-model="column.mapFrom">
             <option select="selected" value="-1">Select csv column</option>
             <option ng-repeat="importColumn in import.data[0] track by $index" value="{{$index}}">{{importColumn}}</option>
           </select>
