--- a/components/header.html
+++ b/components/header.html
@@ -11,8 +11,8 @@
             </blockquote>
           </span>
       </span>
-      <a class="header-icon" target="_blank" href="https://github.com/funretro/distributed"><i class="fa fa-github"></i></a>
-      <a class="header-icon" href="javascript:void(0)" ng-click="sidebarOpened = true;"><i class="fa fa-gear"></i></a>
+      <a class="header-icon" target="_blank" href="https://github.com/funretro/distributed" aria-label="Github repo"><i class="fa fa-github"></i></a>
+      <a class="header-icon" href="javascript:void(0)" ng-click="sidebarOpened = true;" aria-label="Open settings sidebar"><i class="fa fa-gear"></i></a>
       <button class="first" ng-click="modalService.openAddNewBoard(this)">New board</button>
     </span>
 </header>
