--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,7 +1,7 @@
 <div ng-click="sidebarOpened = false;" class="sidebar-overlay" ng-class="{'sidebar-overlay-show': sidebarOpened}"></div>
 <div class="sidebar" ng-class="{'sidebar-show': sidebarOpened}">
   <div class="sidebar-header">
-    <a href="javascript:void(0)" ng-click="sidebarOpened = false;">
+    <a href="javascript:void(0)" ng-click="sidebarOpened = false;" aria-label="Close settings sidebar">
       <i class="fa fa-times"></i>
     </a>
   </div>
