--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -22,9 +22,11 @@
 
     .menu-controls {
       display: flex;
+      margin-bottom: 5px;
     }
 
     select {
+      margin: 0;
       flex-grow: 2;
     }
 
@@ -46,6 +48,12 @@
   border-radius: 2px;
   box-shadow: 0 0 0 0 rgba($teal, 0.5);
   animation: pulse 1.5s;
+
+  @media (max-width: 500px) {
+    display: block;
+    padding-bottom: 0;
+    padding-left: 0;
+  }
 
   strong {
     margin: 0;
@@ -70,4 +78,10 @@
   margin-left: 15px;
   font-size: 0.85em;
   vertical-align: top;
+  border-radius: 3px;
+
+  @media (max-width: 500px) {
+    width: 170px;
+    margin-left: 5px;
+  }
 }
