--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -9,7 +9,6 @@
 
   h2 {
     margin-top: 0;
-    margin-right: 10px;
 
     @media (max-width: 500px) {
       display: block;
@@ -36,8 +35,7 @@
     }
   }
 
-  h2,
-  label {
+  h2 {
     line-height: 1.3em;
   }
 }
