--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -19,7 +19,6 @@
 </script>
 <script type="text/ng-template" id="addNewBoard">
   <h1>New board</h1>
-
   <label for="newBoardName">Board name</label>
   <input id="newBoardName" ng-model="newBoard.name" type="text" ng-keyup="submitOnEnter($event, 'createNewBoard')"></input>
   <label for="maxUserVotes">Max votes per user <small>(whole board)</small></label>
@@ -74,10 +73,10 @@
 <script type="text/ng-template" id="voteSettings">
   <div class='vote-settings'>
     <h1>Vote Settings</h1>
-    <span class="maximum-votes"> Maximum votes: <strong>{{ maxVotes }}</strong> </span>
+    <p>Define max number of votes per participant</p>
+    <span class="maximum-votes"> Max votes: <strong>{{ maxVotes }}</strong> </span>
     <span class="null-blank-space">&nbsp</span>
-    <span><i class="fa fa-plus fa-md increment-button" ng-click="voteService.incrementMaxVotes(userId, maxVotes);" aria-hidden="true"></i></span>
-    <span><i class="fa fa-minus fa-md decrement-button" ng-click="voteService.decrementMaxVotes(userId, maxVotes);" aria-hidden="true"></i></span>
-    <p>Maximum votes are the number of votes each participant is allowed to cast</p>
+    <span><button class="increment-button" ng-click="voteService.incrementMaxVotes(userId, maxVotes);"><i class="fa fa-plus fa-md increment-button" aria-hidden="true"></i></button></span>
+    <span><button class="increment-button" ng-click="voteService.decrementMaxVotes(userId, maxVotes);"><i class="fa fa-minus fa-md decrement-button" aria-hidden="true"></i></button></span>
   </div>
 </script>
