--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -12,24 +12,17 @@
   <button class="delete-button" ng-click="deleteBoard()">Delete</button>
   <a ng-click="modalService.closeAll();">Cancel</a>
 </script>
-<script type="text/ng-template" id="copyBoard">
-  <h1>Export Board</h1>
-  <button class="import-btn" ng-attr-data-clipboard-text="{{importExportService.getBoardPureText(board, messages, sortField)}}">Copy text to clipboard</button>
-  <button class="margin-left" ng-click="importExportService.generatePdf(board, messages, sortField)">Export board to PDF</button>
-  <p class="copy-text" ng-bind-html="importExportService.getBoardText(board, messages, sortField)"></p>
-</script>
 <script type="text/ng-template" id="addNewColumn">
   <h1>New column</h1>
-  <input ng-model="newColumn" type="text" ng-keyup="submitOnEnter($event, 'addNewColumn', newColumn)"></input>
+  <input ng-model="newColumn" type="text" ng-keyup="submitOnEnter($event, 'addNewColumn', newColumn)" aria-label="New column name"></input>
   <button ng-click="addNewColumn(newColumn); newColumn='';">Add</button>
 </script>
 <script type="text/ng-template" id="addNewBoard">
   <h1>New board</h1>
-
-  <label>Board name</label>
-  <input ng-model="newBoard.name" type="text" ng-keyup="submitOnEnter($event, 'createNewBoard')"></input>
-  <label>Max votes per user <small>(whole board)</small></label>
-  <input ng-model="newBoard.max_votes" type="number" ng-init="newBoard.max_votes = 6" ng-keyup="submitOnEnter($event, 'createNewBoard')"></input>
+  <label for="newBoardName">Board name</label>
+  <input id="newBoardName" ng-model="newBoard.name" type="text" ng-keyup="submitOnEnter($event, 'createNewBoard')"></input>
+  <label for="maxUserVotes">Max votes per user <small>(whole board)</small></label>
+  <input id="maxUserVotes" ng-model="newBoard.max_votes" type="number" ng-init="newBoard.max_votes = 6" ng-keyup="submitOnEnter($event, 'createNewBoard')"></input>
   <button ng-disabled="isBoardNameInvalid() || !isMaxVotesValid()" ng-click="createNewBoard()">Create</button>
 </script>
 <script type="text/ng-template" id="deleteCard">
@@ -64,9 +57,9 @@
     <p ng-show="import.mapping.length > 0">2. Asign each column to a specific CSV column</button></p>
     <table>
       <tr ng-repeat="column in import.mapping track by $index">
-        <td class="align-right">{{column.name}}</td>
+        <td class="align-right"><label for="column{{$index}}">{{column.name}}</label></td>
         <td class="align-left">
-          <select class="import-select" title="fields mapping" ng-model="column.mapFrom">
+          <select id="column{{$index}}" class="import-select" ng-model="column.mapFrom">
             <option select="selected" value="-1">Select csv column</option>
             <option ng-repeat="importColumn in import.data[0] track by $index" value="{{$index}}">{{importColumn}}</option>
           </select>
@@ -80,10 +73,10 @@
 <script type="text/ng-template" id="voteSettings">
   <div class='vote-settings'>
     <h1>Vote Settings</h1>
-    <span class="maximum-votes"> Maximum votes: <strong>{{ maxVotes }}</strong> </span>
+    <p>Define max number of votes per participant</p>
+    <span class="maximum-votes"> Max votes: <strong>{{ maxVotes }}</strong> </span>
     <span class="null-blank-space">&nbsp</span>
-    <span><i class="fa fa-plus fa-md increment-button" ng-click="voteService.incrementMaxVotes(userId, maxVotes);" aria-hidden="true"></i></span>
-    <span><i class="fa fa-minus fa-md decrement-button" ng-click="voteService.decrementMaxVotes(userId, maxVotes);" aria-hidden="true"></i></span>
-    <p>Maximum votes are the number of votes each participant is allowed to cast</p>
+    <span><button class="increment-button" ng-click="voteService.incrementMaxVotes(userId, maxVotes);"><i class="fa fa-plus fa-md increment-button" aria-hidden="true"></i></button></span>
+    <span><button class="increment-button" ng-click="voteService.decrementMaxVotes(userId, maxVotes);"><i class="fa fa-minus fa-md decrement-button" aria-hidden="true"></i></button></span>
   </div>
 </script>
