--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,14 +1,15 @@
 <div ng-click="sidebarOpened = false;" class="sidebar-overlay" ng-class="{'sidebar-overlay-show': sidebarOpened}"></div>
 <div class="sidebar" ng-class="{'sidebar-show': sidebarOpened}">
   <div class="sidebar-header">
-    <a href="javascript:void(0)" ng-click="sidebarOpened = false;">
+    <a href="javascript:void(0)" ng-click="sidebarOpened = false;" aria-label="Close settings sidebar">
       <i class="fa fa-times"></i>
     </a>
   </div>
   <div class="sidebar-body">
-    <button id="import-board" ng-click="modalService.openImportBoard(this)">Import CSV</button>
-    <button id="copy-board" ng-click="modalService.openCopyBoard(this)">Export board</button>
-    <button class="delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
-    <button class="delete-button" ng-click="modalService.openDeleteBoard(this)">Delete board</button>
+    <button class="normal-button import-btn" ng-attr-data-clipboard-text="{{importExportService.getBoardPureText(board, messages, sortField)}}"><i class="fa fa-clipboard"></i>Copy board to clipboard</button>
+    <button class="normal-button" ng-click="importExportService.generatePdf(board, messages, sortField)"><i class="fa fa-download"></i>Export board to PDF</button>
+    <button class="normal-button" ng-click="modalService.openImportBoard(this)"><i class="fa fa-upload"></i>Import CSV</button>
+    <button class="delete-button" ng-click="modalService.openDeleteCards(this)"><i class="fa fa-trash"></i>Delete cards</button>
+    <button class="delete-button" ng-click="modalService.openDeleteBoard(this)"><i class="fa fa-trash"></i>Delete board</button>
   </div>
 </div>
