--- a/stylesheets/_spinner.scss
+++ b/stylesheets/_spinner.scss
@@ -24,7 +24,7 @@
   display: inline-block;
   width: 6px;
   height: 50px;
-  background-color: $dark-gray;
+  background-color: $grey;
   animation: stretchdelay 1.2s infinite ease-in-out;
 }
 
